# fastapi-microservice-app

./: .gitignore  README.md  compose.yml  database.db  main.py  pyproject.toml
protos/: product.proto
services/inventory-service/: Dockerfile  pyproject.toml
services/order-service/: Dockerfile  main.py  pyproject.toml
services/product-service/: Dockerfile  main.py
services/user-service/: Dockerfile  auth.py  db.py  main.py  models.py  pyproject.toml
shared/: jwt_utils.py
